--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-point
 
 if(TESTS)
     include_directories(${CMAKE_SOURCE_DIR})
-    add_executable(esie-test tests/main.cpp models/llama.cpp)
+    add_executable(esie-test tests/main.cpp esie/models/llama.cpp)
 else()
-add_executable(esie main.cpp models/llama.cpp)
+add_executable(esie main.cpp esie/models/llama.cpp)
 target_compile_features(esie PRIVATE cxx_std_14)
 endif()
 
